# me700-final

./: README.md  assignment_final_genAIuse.txt  main.py  pyproject.toml  t1.msh
.github/workflows/: main.yml  tests.yaml  tests.yml
demo_ch/: output.xdmf
demos/: demo_cahn-hilliard.py  edges.py  pyvista.py
results/: output.h5  output.xdmf
results/data.bp/: md.0  md.idx  mmd.0  profiling.json
src/: meshing.py  run_sim.py  run_test.py  solver_loop.py  testing.py  weak_form.py
tests/: test.py  test_code.py
tutorial/: basic_tutorial.py
